# KanColleSimulator_KAI

./: .gitignore  .gitmodules  ChangeLog.md  KCS.sln  KanColleSimulator_KAI.workspace  LICENSE  Readme.md  csv_convert.bat  csv_convert.ps1  csv_convert.sh  index.html  run.bat  run_x64.bat  run_x86.bat  shippable.yml  ships.csv  ships_all.csv  slotitems.csv  version.h
KCS_CUI/: KCS_CUI.project  KCS_CUI.sln  KCS_CUI.vcxproj  KCS_CUI.vcxproj.filters
KCS_CUI/source/: CMakeLists.txt  KCS_CUI.rc  arithmetic_convert.hpp  base.hpp  char_convert.hpp  config.cpp  config.hpp  cstring.hpp  exception.cpp  exception.hpp  fleet.cpp  fleet.hpp  kammusu.cpp  kammusu.hpp  lookup.hpp  main.cpp  mapdata.cpp  mapdata.hpp  other.cpp  other.hpp  picojson.h  random.cpp  random.hpp  result.cpp  result.hpp  ships.csv  simulator.cpp  simulator.hpp  slotitems.csv  std_future.hpp  utf8bomskip.hpp  weapon.cpp  weapon.hpp
KCS_GUI/: App.config  CsvDataSet.Designer.cs  CsvDataSet.cs  CsvDataSet.xsd  CsvDataSet.xss  Form1.Designer.cs  Form1.cs  Form1.resx  JsonModels.cs  KCS_GUI.csproj  Program.cs
KCS_GUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
cui/: index.html
gui/: index.html
sample/: 1-1.map  1-5 high.map  2-5 high.map  3-4.map  3-5 high 上ルート.map  3-5 high 下ルート ラスダン.map  3-5 high 下ルート.map  3-5 high.map  3-5.json  4-5 下 ラスダン.map  4-5 中央下 ラスダン.map  4-5 中央中 ラスダン.json  4-5 中央中 ラスダン.map  5-5 高速統一 ラスダン.map  5-5 高速統一 削り.map  6-4 ACN Light.map  6-4 ACN.map  6-4 秋津洲編成.json  fleet 1-5.json  fleet 2016冬E3甲輸送.json  fleet sample1.json  fleet sample2.json  map 3-5 high.map  sample.txt  sample1.json  test1.json  test2.json  test3.json  test4.json
spec/: csv_spec.rb
src/css/: style.css
